--- a/.gitattributes
+++ b/.gitattributes
@@ -2,13 +2,10 @@
 # Set default behavior to automatically normalize line endings.
 ###############################################################################
 * text=auto
-
 ###############################################################################
 # Make sh files under the build directory always have LF as line endings
 ###############################################################################
 build/*.sh eol=lf
-
-
 ###############################################################################
 # Set default behavior for command prompt diff.
 #
@@ -17,7 +14,6 @@ build/*.sh eol=lf
 # Note: This is only used by command line
 ###############################################################################
 #*.cs     diff=csharp
-
 ###############################################################################
 # Set the merge driver for project and solution files
 #
@@ -40,7 +36,6 @@ build/*.sh eol=lf
 #*.modelproj merge=binary
 #*.sqlproj   merge=binary
 #*.wwaproj   merge=binary
-
 ###############################################################################
 # behavior for image files
 #
@@ -49,7 +44,6 @@ build/*.sh eol=lf
 #*.jpg   binary
 #*.png   binary
 #*.gif   binary
-
 ###############################################################################
 # diff behavior for common document formats
 # 
@@ -67,3 +61,4 @@ build/*.sh eol=lf
 #*.PDF   diff=astextplain
 #*.rtf   diff=astextplain
 #*.RTF   diff=astextplain
+libgdal.so filter=lfs diff=lfs merge=lfs -text
